<resources>
    <string name="app_name">Abilinote</string>
    <string name="hello">Hello World!</string>
    <string name="kenya">Kenya</string>
    <string name="activity1">activity 1</string>
    <string name="activity2">Activity 2</string>
    <string name="activity3">Activity 3</string>
    <string name="activity4">Activity 4</string>
    <string name="_8">8*</string>
    <string name="_21">21*</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="element_text">Element</string>
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_notes">Record Notes</string>
    <string name="pause_recording">Pause Recording</string>
    <string name="my_notes">My Notes</string>
    <string name="type_notes">Type Notes</string>
    <string name="resume_recording">Resume Recording</string>
    <string name="note_title">Note Title</string>
    <string name="sample_text">Sample Note Text. Some quite Lengthy sample text. And some more sample text</string>
    <string name="view_note">View Note</string>
    <string name="edit_note_title">Edit Note Title</string>
    <string name="new_text">New Text</string>
    <string name="save_note">Save Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="nothing_here_yet">Nothing here yet</string>
    <string name="search">search</string>
    <string name="sign_in">Sign In</string>
    <string name="search_notes">Search Your Notes</string>
    <string name="log_out">Log out</string>
    <string name="note">Note</string>
    <string name="note_card_default">No Title</string>
    <string name="note_message_default">Empty Note</string>
    <string name="untitled_note">Untitled Note</string>
    <string name="empty_note">(Empty Note)</string>
</resources>
