<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.learnmine.abilinote.VoiceActivity">

    <!--<Button-->
    <!--android:layout_width="120dp"-->
    <!--android:layout_height="120dp"-->
    <!--android:layout_marginStart="10dp"-->
    <!--android:background="@drawable/circle_red"-->
    <!--android:drawableTop="@drawable/microphone"-->
    <!--android:padding="20dp"-->
    <!--android:text="@string/record_notes"-->
    <!--android:textColor="#fff"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:id="@+id/btnVoice"-->
    <!--android:onClick="recordVoiceHandler"/>-->
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleScrollView"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">
        <EditText
            android:hint="@string/edit_note_title"
            android:id="@+id/voiceEditNoteTitle"
            android:labelFor="@+id/voiceEditNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:minLines="2"
            android:inputType="text"/>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBarVoice"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toggleBtnVoice"
        android:layout_marginTop="28dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <ListView
        android:id="@+id/lvRelevantNotes"
        android:layout_below="@+id/progressBarVoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nothing_here_yet"/>

    <ListView
        android:id="@+id/lvVoiceResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvRelevantNotes"/>

    <Button
        android:id="@+id/btnVoiceSave"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle_green"
        android:onClick="saveEntireNoteHandler"
        android:drawableTop="@android:drawable/ic_menu_save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />

    <ToggleButton
        android:id="@+id/toggleBtnVoice"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/circle_red"
        android:drawableTop="@drawable/microphone"
        android:padding="20dp"
        android:text="@string/record_notes"
        android:textColor="#fff"
        android:textOff="@string/resume_recording"
        android:textOn="@string/pause_recording"
        android:layout_below="@+id/titleScrollView"
        android:layout_centerHorizontal="true" />
    <!--<ImageButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/microphoneButton"-->
    <!--android:src="@drawable/ic_mic_none_white_48dp"-->
    <!--android:background="@drawable/circle_red"-->
    <!--android:layout_alignBottom="@+id/imageView"-->
    <!--android:layout_centerHorizontal="true" />-->

</RelativeLayout>
